fixed text alignment

--- a/styles.css
+++ b/styles.css
@@ -223,7 +223,7 @@ img {
 /* lower card text */
 .lower-card h4,
 p {
-  margin-left: 20px;
+  margin-left: 10px;
   align-self: normal;
 }
 .card {
